[package]
name = "linux-in-practice"
edition = "2024"

[[bin]]
name = "hello"

[[bin]]
name = "inf-loop"
path = "src/bin/inf_loop.rs"

[[bin]]
name = "syscall-inf-loop"
path = "src/bin/syscall_inf_loop.rs"

[[bin]]
name = "pause"

[[bin]]
name = "fork"

[[bin]]
name = "fork-and-exec"
path = "src/bin/fork_and_exec.rs"

[[bin]]
name = "intignore"

[[bin]]
name = "load"

[[bin]]
name = "sched"

[[bin]]
name = "sched-nice"
path = "src/bin/sched_nice.rs"

[[bin]]
name = "memuse"

[[bin]]
name = "segv"

[[bin]]
name = "mmap"

[dependencies]
libc = "0.2"
