[package]
name = "linux-in-practice"
edition = "2024"

[[bin]]
name = "hello"

[[bin]]
name = "inf-loop"
path = "src/bin/inf_loop.rs"

[[bin]]
name = "syscall-inf-loop"
path = "src/bin/syscall_inf_loop.rs"

[[bin]]
name = "pause"

[[bin]]
name = "fork"

[[bin]]
name = "fork-and-exec"
path = "src/bin/fork_and_exec.rs"

[[bin]]
name = "intignore"

[[bin]]
name = "load"

[[bin]]
name = "sched"

[[bin]]
name = "sched-nice"
path = "src/bin/sched_nice.rs"

[[bin]]
name = "memuse"

[[bin]]
name = "segv"

[[bin]]
name = "mmap"

[[bin]]
name = "demand-paging"
path = "src/bin/demand_paging.rs"

[[bin]]
name = "capture"

[[bin]]
name = "cow"

[[bin]]
name = "non-shared-memory"
path = "src/bin/non_shared_memory.rs"

[[bin]]
name = "shared-memory"
path = "src/bin/shared_memory.rs"

[[bin]]
name = "inc"

[[bin]]
name = "inc-wrong-lock"
path = "src/bin/inc_wrong_lock.rs"

[dependencies]
libc = "0.2"
